# ikura

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
includes/vk_mem_alloc/: CMakeLists.txt
scripts/: install_external_library.sh  pack_library.sh  uninstall.sh
src/: CMakeLists.txt  ikura.hpp  init.cpp
src/common/: CMakeLists.txt  resourceDirectory.cpp  resourceDirectory.hpp
src/engine/: CMakeLists.txt
src/engine/renderEngine/: renderEngine.hpp
src/ikura/: CMakeLists.txt
src/ikura/common/: CMakeLists.txt
src/ikura/engine/: CMakeLists.txt  appEngine.hpp
src/ikura/engine/renderEngine/: initInstance.cpp  renderEngine.cpp
src/ikura/misc/: CMakeLists.txt
src/ikura/renderComponent/basic/: basicRenderTarget.cpp
src/ikura/window/: window.cpp  window.hpp
src/ikura/window/nativeWindow/: glfwNativeWindow.cpp  nativeWindow.cpp  nativeWindow.hpp
src/ikura/window/virtualWindow/: imGuiVirtualWindow.hpp
src/misc/: CMakeLists.txt
src/renderComponent/: CMakeLists.txt
src/shape/: CMakeLists.txt
src/window/: CMakeLists.txt
src/window/virtualWindow/: imGuiVirtualWindow.cpp
